[project]
name = "hsi-dsm-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "dash-canvas>=0.1.0",
    "dash-uploader>=0.7.0a2",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "rasterio>=1.4.3",
    "rs-fusion-datasets>=0.15.5",
    "scipy>=1.15.3",
]
